--- a/pages/product.html
+++ b/pages/product.html
@@ -13,44 +13,8 @@
     <link rel="stylesheet" href="../scss/style.css" />
   </head>
   <body>
-    <div class="header">
-      <div class="header__logo">
-        <a href="../index.html"
-          ><img src="../assets/full-logo.svg" alt="logo"
-        /></a>
-      </div>
-      <div class="header__nav">
-        <ul>
-          <li class="header__nav-item body2--medium">
-            <a href="../index.html">Home</a>
-          </li>
-          <li class="header__nav-item body2--medium">
-            <a href="./service.html">Service</a>
-          </li>
-          <li class="header__nav-item body2--medium">
-            <a href="./feature.html">Feature</a>
-          </li>
-          <li class="header__nav-item body2--medium">
-            <a href="./product.html">Product</a>
-          </li>
-          <li class="header__nav-item body2--medium">
-            <a href="./testimonial.html">Testimonial</a>
-          </li>
-          <li class="header__nav-item body2--medium">
-            <a href="./faq.html">FAQ</a>
-          </li>
-        </ul>
-      </div>
-      <div class="header__regis">
-        <button class="btn btn__tertiary btn__tertiary--default">Login</button>
-        <button class="signup-btn btn btn__primary btn__primary--default">
-          Sign up
-        </button>
-      </div>
-      <div class="header__menu-icon">
-        <img src="../assets/menu.svg" width="28px" height="28px" alt="" />
-      </div>
-    </div>
+    <div class="header-container"></div>
     <h2 class="page-heading headline1">Product page</h2>
+    <script src="../main.js"></script>
   </body>
 </html>
