refactor: index file + absolute path file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../scss/style.css" />
+    <link rel="stylesheet" href="./scss/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,13 +24,13 @@
             </div>
           </div>
           <div class="clients-logo">
-            <img src="../assets/client1.svg" alt="" />
-            <img src="../assets/client2.svg" alt="" />
-            <img src="../assets/client3.svg" alt="" />
-            <img src="../assets/client4.svg" alt="" />
-            <img src="../assets/client5.svg" alt="" />
-            <img src="../assets/client6.svg" alt="" />
-            <img src="../assets/client7.svg" alt="" />
+            <img src="./assets/client1.svg" alt="" />
+            <img src="./assets/client2.svg" alt="" />
+            <img src="./assets/client3.svg" alt="" />
+            <img src="./assets/client4.svg" alt="" />
+            <img src="./assets/client5.svg" alt="" />
+            <img src="./assets/client6.svg" alt="" />
+            <img src="./assets/client7.svg" alt="" />
           </div>
         </div>
         <div class="section community">
@@ -45,7 +45,7 @@
           <div class="community__card-container">
             <div class="community__card">
               <div class="community__card-img">
-                <img src="../assets/membership.svg" alt="" />
+                <img src="./assets/membership.svg" alt="" />
               </div>
               <div class="community__heading headline3">
                 <p>Membership Organisations</p>
@@ -59,7 +59,7 @@
             </div>
             <div class="community__card">
               <div class="community__card-img">
-                <img src="../assets/national-association.svg" alt="" />
+                <img src="./assets/national-association.svg" alt="" />
               </div>
               <div class="community__heading headline3">
                 <p>National Associations</p>
@@ -73,7 +73,7 @@
             </div>
             <div class="community__card">
               <div class="community__card-img">
-                <img src="../assets/club&group.svg" alt="" />
+                <img src="./assets/club&group.svg" alt="" />
               </div>
               <div class="community__heading headline3">
                 <p>Clubs And Groups</p>
@@ -90,7 +90,7 @@
         <div class="content__body">
           <div class="section unlock">
             <div class="unlock__img">
-              <img src="../assets/rafiki.svg" alt="" />
+              <img src="./assets/rafiki.svg" alt="" />
             </div>
             <div class="unlock__text">
               <div class="unlock__heading headline2">
@@ -125,7 +125,7 @@
             <div class="achievements__counts">
               <div class="achievements__item">
                 <div class="achievements__img">
-                  <img src="../assets/member.svg" alt="" />
+                  <img src="./assets/member.svg" alt="" />
                 </div>
                 <div class="achievements__info">
                   <div class="item-heading headline3"><p>2,245,341</p></div>
@@ -136,7 +136,7 @@
               </div>
               <div class="achievements__item">
                 <div class="achievements__img">
-                  <img src="../assets/club.svg" alt="" />
+                  <img src="./assets/club.svg" alt="" />
                 </div>
                 <div class="achievements__info">
                   <div class="item-heading headline3"><p>2,245,341</p></div>
@@ -147,7 +147,7 @@
               </div>
               <div class="achievements__item">
                 <div class="achievements__img">
-                  <img src="../assets/event-booking.svg" alt="" />
+                  <img src="./assets/event-booking.svg" alt="" />
                 </div>
                 <div class="achievements__info">
                   <div class="item-heading headline3"><p>2,245,341</p></div>
@@ -158,7 +158,7 @@
               </div>
               <div class="achievements__item">
                 <div class="achievements__img">
-                  <img src="../assets/payment.svg" alt="" />
+                  <img src="./assets/payment.svg" alt="" />
                 </div>
                 <div class="achievements__info">
                   <div class="item-heading headline3"><p>2,245,341</p></div>
@@ -171,7 +171,7 @@
           </div>
           <div class="section calenders">
             <div class="calenders__img">
-              <img src="../assets/pana.svg" alt="" />
+              <img src="./assets/pana.svg" alt="" />
             </div>
             <div class="calenders__text">
               <div class="calenders__heading headline2">
@@ -199,7 +199,7 @@
           </div>
           <div class="section customers">
             <div class="customers__img">
-              <img src="../assets/customer.jpg" alt="" />
+              <img src="./assets/customer.jpg" alt="" />
             </div>
             <div class="customers__text">
               <div class="customers__text-content">
@@ -226,18 +226,18 @@
               </div>
               <div class="customers__text-footer">
                 <div class="customers__icon">
-                  <img src="../assets/client1.svg" alt="" />
-                  <img src="../assets/client2.svg" alt="" />
-                  <img src="../assets/client3.svg" alt="" />
-                  <img src="../assets/client4.svg" alt="" />
-                  <img src="../assets/client5.svg" alt="" />
+                  <img src="./assets/client1.svg" alt="" />
+                  <img src="./assets/client2.svg" alt="" />
+                  <img src="./assets/client3.svg" alt="" />
+                  <img src="./assets/client4.svg" alt="" />
+                  <img src="./assets/client5.svg" alt="" />
                 </div>
                 <button
                   class="customer__nav btn btn__tertiary btn__tertiary--default headline4"
                 >
                   Meet all customers
                   <span
-                    ><img src="../assets/arrow-right-icon.svg" alt=""
+                    ><img src="./assets/arrow-right-icon.svg" alt=""
                   /></span>
                 </button>
               </div>
@@ -256,7 +256,7 @@
             <div class="community-updates__content">
               <div class="community-updates__card">
                 <div class="community-updates__img">
-                  <img src="../assets/comunity-updates1.jpg" alt="" />
+                  <img src="./assets/comunity-updates1.jpg" alt="" />
                 </div>
                 <div class="community-updates__card-info">
                   <p class="headline4">
@@ -267,14 +267,14 @@
                   >
                     Read more
                     <span
-                      ><img src="../assets/arrow-right-icon.svg" alt=""
+                      ><img src="./assets/arrow-right-icon.svg" alt=""
                     /></span>
                   </button>
                 </div>
               </div>
               <div class="community-updates__card">
                 <div class="community-updates__img">
-                  <img src="../assets/comunity-updates2.jpg" alt="" />
+                  <img src="./assets/comunity-updates2.jpg" alt="" />
                 </div>
                 <div class="community-updates__card-info">
                   <p class="headline4">
@@ -286,14 +286,14 @@
                   >
                     Read more
                     <span
-                      ><img src="../assets/arrow-right-icon.svg" alt=""
+                      ><img src="./assets/arrow-right-icon.svg" alt=""
                     /></span>
                   </button>
                 </div>
               </div>
               <div class="community-updates__card">
                 <div class="community-updates__img">
-                  <img src="../assets/comunity-updates3.jpg" alt="" />
+                  <img src="./assets/comunity-updates3.jpg" alt="" />
                 </div>
                 <div class="community-updates__card-info">
                   <p class="headline4">
@@ -304,7 +304,7 @@
                   >
                     Read more
                     <span
-                      ><img src="../assets/arrow-right-icon.svg" alt=""
+                      ><img src="./assets/arrow-right-icon.svg" alt=""
                     /></span>
                   </button>
                 </div>
@@ -319,24 +319,24 @@
           <button class="btn btn__primary btn__primary--default body2--medium">
             Get a Demo
             <span
-              ><img src="../assets/arrow-right-icon-white.svg" alt=""
+              ><img src="./assets/arrow-right-icon-white.svg" alt=""
             /></span>
           </button>
         </div>
         <div class="footer__content">
           <div class="footer__content-left">
             <div class="footer__logo">
-              <img src="../assets/Logo-footer.svg" alt="" />
+              <img src="./assets/Logo-footer.svg" alt="" />
             </div>
             <div class="footer__copyright-info body3--regular">
               <p>Copyright © 2020 Nexcent ltd.</p>
               <p>All rights reserved</p>
             </div>
             <div class="footer__social-icon">
-              <img src="../assets/insta.svg" alt="" />
-              <img src="../assets/social2.svg" alt="" />
-              <img src="../assets/social3.svg" alt="" />
-              <img src="../assets/social4.svg" alt="" />
+              <img src="./assets/insta.svg" alt="" />
+              <img src="./assets/social2.svg" alt="" />
+              <img src="./assets/social3.svg" alt="" />
+              <img src="./assets/social4.svg" alt="" />
             </div>
           </div>
           <div class="footer__content-right">
@@ -370,13 +370,13 @@
                   placeholder="Your email address"
                   type="text"
                 />
-                <img src="../assets/send-icon.svg" alt="" />
+                <img src="./assets/send-icon.svg" alt="" />
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="../main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
