--- a/pages/feature.html
+++ b/pages/feature.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../scss/style.css" />
+    <link rel="stylesheet" href="/w3_30-6/scss/style.css" />
   </head>
   <body>
     <div class="header-container"></div>
