--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/w3_30-6/scss/style.css" />
+    <link rel="stylesheet" href="./scss/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -381,6 +381,6 @@
         </div>
       </div>
     </div>
-    <script src="/w3_30-6/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
